# p2ce-vscript-support

./: .gitignore  CHANGELOG  CHANGELOG.md  Cargo.toml  README.md  build-linux-x64.sh  build-win32-x64.ps1  build_extension.bat
.github/workflows/: release.yaml
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/file-to-phf/: Cargo.toml
crates/ide/: Cargo.toml
crates/ide/src/: arena.rs  collector.rs  db.rs  doc.rs  lib.rs  symbol.rs
crates/ls/: Cargo.toml
crates/ls/src/: completion.rs  conversions.rs  document_link.rs  document_symbols.rs  find_references.rs  go_to_definition.rs  go_to_definiton.rs  go_to_type_definition.rs  hover.rs  inlay_hints.rs  main.rs  prepare_rename.rs  rename.rs  semantic_tokens.rs  signature_help.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: main.rs
crates/parser/: Cargo.toml
crates/parser/benches/: parse.rs
crates/parser/src/: ast.rs  cst.rs  doc_comment.rs  lexer.rs  lib.rs  parser.rs  token_set.rs
crates/parser/tests/: test_parser.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: arena.rs  db.rs  lib.rs  resolver.rs  symbol.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  positions.rs  session.rs
crates/server/src/handlers/: completion.rs  diagnostics.rs  document_link.rs  document_symbols.rs  find_references.rs  go_to_definition.rs  go_to_type_definition.rs  hover.rs  inlay_hints.rs  mod.rs  prepare_rename.rs  rename.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  workspace_symbol.rs
crates/string_literals/: Cargo.toml
crates/string_literals/data/: attributes.txt  classnames.txt  classnames_to_classes.txt  client_convars.txt  convars.txt  inputs.txt  outputs.txt
crates/string_literals/data/properties/: bool.txt  bool_array.txt  entity.txt  entity_array.txt  float.txt  float_array.txt  integer.txt  integer_array.txt  string.txt  string_array.txt  vector.txt  vector_array.txt
crates/string_literals/src/: lib.rs
crates/string_literals_macros/: Cargo.toml
crates/string_literals_macros/src/: lib.rs
editors/code/: .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
editors/code/src/: extension.ts
editors/code/syntaxes/: sqDoc.injection.tmLanguage.json  sqDoc.tmLanguage.json  squirrel.tmLanguage.json  squirrelDoc.tmLanguage.json
vscript_lib/: builtins.nut  squirrel.nut  vscript.nut
