[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["ocet247"]
license = "GPL-3.0-only"

[workspace.dependencies]
salsa = "0.26.0"
rustc-hash = "2.1.1"
line-index = "0.1.2"
bitflags = "2"
phf = { version = "0.13.1", features = ["macros"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
