[package]
name = "tf2-vscript-ls"
version = "0.1.0"
edition = "2024"

[dependencies]
resolver = { path = "../resolver" }
sq-3-parser = { path = "../parser" }
lsp-server = "0.7.9"
lsp-types = "0.95.1"
serde_json = "1.0.149"
anyhow = "1.0.102"
serde = "1.0.228"
rustc-hash = { workspace = true }
salsa = { workspace = true }
line-index = { workspace = true }
bitflags = { workspace = true }


[lints]
workspace = true
