[package]
name = "sq-3-parser"
description = "Squirrel 3 error resilient parser that produces rowan CST"
version = "0.0.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
rowan = "0.16.1"
phf = { workspace = true }
num-traits = "0.2"
num-derive = "0.4"

[lints]
workspace = true
