[package]
name = "resolver"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
sq-3-parser = { path = "../parser" }
string_literals = { path = "../string_literals" }
la-arena = "0.3.1"
walkdir = "2"
rustc-hash = { workspace = true }
salsa = { workspace = true }
line-index = { workspace = true }
bitflags = { workspace = true }

[lints]
workspace = true
